# pitch_type

./: .gitignore  .pylintrc  0_environment.yml  Makefile  On videos.ipynb  Player localization.ipynb  README.md  Release and first movement frame.ipynb  array_from_videos.py  ball_detection.py  batter_first_move_train.py  best.py  best_1player_allclasses.py  best_cluster_script53.py  bestplayer4AllPitch73.py  classify_movement.py  config.py  coord_fill_in.py  coord_fill_in_test.py  coord_fill_in_train.py  data_preprocess.py  demo.ipynb  detect_event.py  environment.yml  first_movement_frame.py  fmo_detection.py  fom_detection.py  from_video_to_pitchtype.py  get_first_move.py  hpc_sbatch.txt  joints_to_pitchtype.py  library.bib  meta.yaml  model.py  new_classify_movement.py  old_data_train_test.py  pitch classification.ipynb  pitch_types.csv  pitcher_first_move_train.py  release_frame.ipynb  (+24 more)
.ipynb_checkpoints/: Evaluation-checkpoint.ipynb  new_plots-checkpoint.ipynb
1_Pose_Estimation/: README.md  config  config_reader.py  data_processing.py  from_video_to_joints.py  ice_hockey.py  joint_trajectories.py  json_to_csv.py  pose_estimation_script.py  real_time_localize.py  time_probe.py  util.py  visualization_pose_estimation.ipynb
2 Movement classification/: classify_movement.py  run_10fold.py  run_thread.py
2_Movement_classification/: README.md  classify_movement.py  classify_movement_modified.py  classify_movement_normal.py  config.py  old_data_train_test.py  run_10fold.py  run_tflearn.py  run_thread.py  ten_fold_results.json  test.py
3_Event_detection/: First move evaluation.ipynb  test.py  (+17 more)
4_Object_tracking/PitchSpeed/: CMakeLists.txt
4_Object_tracking/PitchSpeed/buildd/: CMakeCache.txt  Makefile  cmake_install.cmake
4_Object_tracking/PitchSpeed/buildd/source/SpeedFrom2dData/: Makefile  cmake_install.cmake
4_Object_tracking/PitchSpeed/source/: CommandLineArguments.cpp  CommandLineArguments.h  Common.h  FileHelper.cpp  FileHelper.h  GamedayServer.cpp  GamedayServer.h  Logger.h  Matrices.cpp  Matrices.h  Matrix4.cpp  Matrix4.h  MomentsOfDistribution.h  MyAnalytics.cpp  MyAnalytics.h  MyMath.h  Pitch.cpp  Pitch.h  PitchFxIo.cpp  PitchFxIo.h  Timestamp.cpp  Timestamp.h  UnitConversion.cpp  UnitConversion.h  Vector2.h  Vector3.h  Vector4.h  Vectors.h  ViewProjectionMatrix.cpp  ViewProjectionMatrix.h
4_Object_tracking/PitchSpeed/source/SpeedFrom2dData/: CMakeLists.txt  PitchSpeedFrom2dPixelData.cpp
(+362 files in other folders)
